* Upgraded existing programs. * Added new programs.

--- a/README
+++ b/README
@@ -1,6 +1,4 @@
-These programs are Python implementations of the examples in the 
-following book.
-J. Jin, The Finite Element Method in Electromagnetics, Wiley-IEEE 
-Press, 2002.
+These programs are Python implementations of the examples in the "J. Jin, The Finite Element Method in Electromagnetics, 2nd ed. Wiley-IEEE Press, 2002".
 
 Kyungwon Chun (kwchun@.gist.ac.kr)
+
